latest version before changing the navbar

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 <!-- navbar section starts -->
 <header class="header">
     <div class="logo">
-        <h1>AgriSens Project</h1>
+        <h1>AgriSens</h1>
     </div>
 
     <nav class="navbar">
