--- a/guide/static/guide/css/styles.css
+++ b/guide/static/guide/css/styles.css
@@ -14,7 +14,7 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #2e7d32;
+  background-color: #b6ccbc;
 }
 
 /* scroll bar ends */
@@ -22,25 +22,34 @@ html {
 /* navbar section starts */
         
 .navbar {
+  
   display: flex;
   justify-content: left;  /* Aligns the button to the left */
-  padding: 8px;
+  padding: 10px;
   background-color: white; /* Green background */
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  z-index: 10;
+  z-index: 100;
+}
+
+.sans-serif{
+  font-size: 1.3rem;
+  font-weight: bold;
+  color: black;
+  padding: 5px 30px;
 }
 
 .home-link{
+  margin-left: 70rem;
 text-decoration: none;
-font-size: 1rem;
+font-size: 1.2rem;
 font-weight: normal;
-color: rgb(16, 9, 9);
+color: black;
 text-transform: uppercase;
-padding: 10px 15px;
+padding: 5px 15px;
 display: inline-block;
 }
 
@@ -378,7 +387,7 @@ p {
 }
 
 .dropbtn {
-  background-color: #2ecc71;
+  background-color: #4caf50;
   position: relative;
   color: white;
   padding: 12px 20px;
@@ -392,7 +401,7 @@ p {
 }
 
 .dropbtn:hover {
-  background-color: #27ae60;
+  background-color: #2e7d32;
   transform: translateY(-2px);
 }
 
