--- a/weather_forecast/templates/weather_forecast/index.html
+++ b/weather_forecast/templates/weather_forecast/index.html
@@ -21,7 +21,7 @@
     <style>
 
 /* navbar section starts */
-    
+        
 .navbar {
     display: flex;
     justify-content: left;  /* Aligns the button to the left */
@@ -34,14 +34,22 @@
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.sans-serif{
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: white;
+    padding: 5px 30px;
+}
 
 .home-link{
 text-decoration: none;
-font-size: 1rem;
+font-family: sans-serif;
+margin-left: 70rem;
+font-size: 1.2rem;
 font-weight: normal;
 color: white;
 text-transform: uppercase;
-padding: 10px 15px;
+padding: 5px 15px;
 display: inline-block;
 }
 
@@ -480,6 +488,7 @@ display: inline-block;
 <body>
 
     <div class="navbar">
+        <span class="sans-serif">AgriSens</span>
         <a href="{% url 'index' %}" class="home-link">Home</a>
     </div>
 
