--- a/guide/templates/guide/index.html
+++ b/guide/templates/guide/index.html
@@ -152,7 +152,7 @@
       </ol>
     </section> -->
 
-     <section id="about-project">
+     <!-- <section id="about-project">
       <h2>About</h2>
       <p>
         This dataset is recreated using offline augmentation from the original
@@ -165,6 +165,7 @@
         <li>validation (17572 images)</li>
       </ul>
     </section>
+  -->
 
     <section class="footer">
       <p class="footer-text">© Copyright – All Rights Reserved Team AgriSens</p>
