--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
-<body>
+<body>z
 <!-- navbar section starts -->
 <header class="header">
     <div class="logo">
@@ -128,7 +128,7 @@
 
     <div class="contact-info">
         <p><i class="fas fa-envelope"></i> <span class="email">agrisensteam@gmail.com</span></p>
-        <p><i class="fas fa-phone-alt"></i> +91 9188650352</p>
+      <!-- <p><i class="fas fa-phone-alt"></i> +91 9188650352</p> -->
     </div>
 </section>
 <!-- About Us Section Ends -->
