--- a/weather_forecast/templates/weather_forecast/index.html
+++ b/weather_forecast/templates/weather_forecast/index.html
@@ -310,7 +310,7 @@ display: inline-block;
     align-items: center;
     overflow: hidden; /* Prevents unwanted spacing */
     border-radius: 50px; /* Ensure both sides blend */
-    background: rgba(255, 255, 255, 0.8);
+    background: #b6e0f3;
         }
 
         .input-box {
@@ -382,7 +382,7 @@ display: inline-block;
         .weather-box {
             margin-bottom: 30px;
             position: relative;
-            padding: 20px;
+            padding: 30px;
             border-radius: 15px;
             background: rgba(255, 255, 255, 0.4);
             transition: transform 0.3s;
@@ -520,14 +520,14 @@ display: inline-block;
         <div class="weather-body">
             <div class="weather-box">
                 <p class="temperature">0 <sup>°C</sup></p>
-                <p class="description">light rain</p>
+                <p class="description"></p>
             </div>
 
             <div class="weather-details">
                 <div class="humidity">
                     <i class='bx bx-water'></i>
                     <div class="text">
-                        <span id="humidity">45%</span>
+                        <span id="humidity">0%</span>
                         <p>Humidity</p>
                     </div>
                 </div>
@@ -535,7 +535,7 @@ display: inline-block;
                 <div class="wind">
                     <i class='bx bx-wind'></i>
                     <div class="text">
-                        <span id="wind-speed">12Km/H</span>
+                        <span id="wind-speed">0Km/H</span>
                         <p>Wind Speed</p>
                     </div>
                 </div>
